--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node server/server.js"
   },
   "dependencies": {
-    "ws": "1.1.0",
+    "websocket": "1.0.24",
     "express": "4.13.3"
   },
   "repository": {
