--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   },
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "build": "node build/build.js"
   },
   "dependencies": {
     "websocket": "1.0.24",
     "express": "4.13.3"
+  },
+  "devDependencies": {
+    "requirejs": "latest",
+    "shelljs": "latest"
   },
   "repository": {
     "type": "git",
